--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2024-09-18 105313.png=@Screenshot 2024-09-18 105313,0
+Screenshot 2024-09-18 114119.png=@Screenshot 2024-09-18 114119,0
