--- a/desktop.ini
+++ b/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2024-09-18 105313.png=@Screenshot 2024-09-18 105313,0
 Screenshot 2024-09-18 114119.png=@Screenshot 2024-09-18 114119,0
+Screenshot 2024-09-18 121342.png=@Screenshot 2024-09-18 121342,0
