--- a/desktop.ini
+++ b/desktop.ini
@@ -3,3 +3,4 @@ Screenshot 2024-09-18 105313.png=@Screenshot 2024-09-18 105313,0
 Screenshot 2024-09-18 114119.png=@Screenshot 2024-09-18 114119,0
 Screenshot 2024-09-18 121342.png=@Screenshot 2024-09-18 121342,0
 Screenshot 2024-09-18 131146.png=@Screenshot 2024-09-18 131146,0
+Screenshot 2024-09-18 140755.png=@Screenshot 2024-09-18 140755,0
