--- a/desktop.ini
+++ b/desktop.ini
@@ -4,3 +4,4 @@ Screenshot 2024-09-18 114119.png=@Screenshot 2024-09-18 114119,0
 Screenshot 2024-09-18 121342.png=@Screenshot 2024-09-18 121342,0
 Screenshot 2024-09-18 131146.png=@Screenshot 2024-09-18 131146,0
 Screenshot 2024-09-18 140755.png=@Screenshot 2024-09-18 140755,0
+Screenshot 2024-09-18 143356.png=@Screenshot 2024-09-18 143356,0
