--- a/desktop.ini
+++ b/desktop.ini
@@ -8,3 +8,5 @@ Screenshot 2024-09-18 143356.png=@Screenshot 2024-09-18 143356,0
 Screenshot 2024-09-18 145324.png=@Screenshot 2024-09-18 145324,0
 Screenshot 2024-09-18 151332.png=@Screenshot 2024-09-18 151332,0
 Screenshot 2024-09-18 154853.png=@Screenshot 2024-09-18 154853,0
+[.ShellClassInfo]
+LocalizedResourceName=@vue.jsImages,0
